@@ -1,3 +1,8 @@
+2006-03-01  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/widgets/radiobutton.py (RadioButton._on_group_changed): 
+	Emit content changed when any radio button in the group changes
+
 2006-02-24  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/widgets/combo.py:
